Fixed long text overflowing inside buttons. Resolves #194.

--- a/wger/core/static/css/bootstrap-custom.css
+++ b/wger/core/static/css/bootstrap-custom.css
@@ -170,6 +170,10 @@ body {
 /**************************************************************
  * Buttons
  **************************************************************/
+.btn {
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
 .btn-default {
   color: #333;
   background-color: #eeeeec;
